--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/Main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../CSS/Main.css" />
     <title>ZFlix</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header class="main-header">
+      <div class="container">
+        <a href="#">ZFlix</a>
+        <nav class="main-nav">
+          <ul class="main-nav__items">
+            <li class="main-nav__item">
+              <a href="#">Movies</a>
+            </li>
+
+            <li class="main-nav__item">
+              <a href="#">TV Shows</a>
+            </li>
+
+            <li class="main-nav__item">
+              <a href="#">Login</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
