--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../CSS/Main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,300&display=swap" rel="stylesheet">
     <title>ZFlix</title>
   </head>
   <body>
     <header class="main-header">
       <div class="container">
-        <a href="#">ZFlix</a>
+        <a href="#" class="header-title">ZFlix</a>
         <nav class="main-nav">
           <ul class="main-nav__items">
             <li class="main-nav__item">
