--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../CSS/Main.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,300&display=swap"
+      rel="stylesheet"
+    />
     <title>ZFlix</title>
   </head>
   <body>
@@ -25,11 +28,21 @@
             </li>
 
             <li class="main-nav__item">
-              <a href="#">Login</a>
+              <a href="#" class="btn">Login</a>
             </li>
           </ul>
         </nav>
       </div>
     </header>
+
+    <section id="showcase">
+      <div class="content">
+        <h1>Discover the hundreds of Movies and TV Shows</h1>
+        <p>
+          Watch anywhere. Cancel at any time
+        </p>
+        <a href="#" class="btn">Sign Up</a>
+      </div>
+    </section>
   </body>
 </html>
