--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../CSS/Main.css" />
+    <link rel="stylesheet" href="../CSS/Button.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -41,7 +42,7 @@
         <p>
           Watch anywhere. Cancel at any time
         </p>
-        <a href="#" class="btn">Sign Up</a>
+        <a href="#" class="btn btn-secondary">Sign Up</a>
       </div>
     </section>
   </body>
