Add featured movies

--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../CSS/Main.css" />
-    <link rel="stylesheet" href="../CSS/Button.css">
+    <link rel="stylesheet" href="../CSS/Button.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -39,10 +39,24 @@
     <section id="showcase">
       <div class="content">
         <h1>Discover the hundreds of Movies and TV Shows</h1>
-        <p>
-          Watch anywhere. Cancel at any time
-        </p>
+        <p>Watch anywhere. Cancel at any time</p>
         <a href="#" class="btn btn-secondary">Sign Up</a>
+      </div>
+    </section>
+
+    <section id="movies">
+      <div class="featured-movies">
+        <div class="row featured-movies__content">
+          <h2>Featured Movies</h2>
+          <p>Here is this months featured movies</p>
+        </div>
+
+        <div class="row featured-movies__movie-posters">
+          <div class="movie-poster movie-1"></div>
+          <div class="movie-poster movie-2"></div>
+          <div class="movie-poster movie-3"></div>
+          <div class="movie-poster movie-4"></div>
+        </div>
       </div>
     </section>
   </body>
