Resizing Featured Movies

--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -51,6 +51,11 @@
           <p>Here is this months featured movies</p>
         </div>
 
+        <!-- 
+        ! If pic's are huge, make them smaller. because big
+        ! pic's are not easy to use.
+       -->
+
         <div class="row featured-movies__movie-posters">
           <div class="movie-poster movie-1"></div>
           <div class="movie-poster movie-2"></div>
