Edit Login Button

--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -18,7 +18,7 @@
   <body>
     <header class="main-header">
       <div class="container">
-        <a href="#">ZFlix</a>
+        <a class="page-title" href="#">ZFlix</a>
         <nav class="main-nav">
           <ul class="main-nav__items">
             <li class="main-nav__item">
@@ -28,7 +28,7 @@
               <a href="#">TV Shows</a>
             </li>
             <li class="main-nav__item main-nav__item--login">
-              <a class="btn btn-outline-secondary" href="#">Login</a>
+              <a class="btn btn-header" href="#">Login</a>
             </li>
           </ul>
         </nav>
