--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -13,15 +13,19 @@
       <div class="form-box">
         <div class="button-box">
           <div id="btn"></div>
-          <button type="button" class="toggle-btn">Log In</button>
-          <button type="button" class="toggle-btn">Register</button>
+          <button type="button" class="toggle-btn" onclick="login()">
+            Log In
+          </button>
+          <button type="button" class="toggle-btn" onclick="register()">
+            Register
+          </button>
         </div>
         <div class="social-icons">
           <img src="../HTML/pic/fb.png" alt="" />
           <img src="../HTML/pic/tw.png" alt="" />
           <img src="../HTML/pic/gp.png" alt="" />
         </div>
-        <form class="input-group" action="">
+        <form id="login" class="input-group" action="">
           <input
             class="input-field"
             type="text"
@@ -39,7 +43,50 @@
           >
           <button class="submit-btn" type="submit">Log in</button>
         </form>
+
+        <form id="register" class="input-group" action="">
+          <input
+            class="input-field"
+            type="text"
+            placeholder="User Id"
+            required
+          />
+          <input
+            class="input-field"
+            type="email"
+            placeholder="Email Id"
+            required
+          />
+          <input
+            class="input-field"
+            type="text"
+            placeholder="Enter Password"
+            required
+          />
+          <input class="check-box" type="checkbox" /><span
+            >I agree to the terms & conditions</span
+          >
+          <button class="submit-btn" type="submit">Register</button>
+        </form>
       </div>
     </div>
+
+    <script>
+      var x = document.getElementById("login");
+      var y = document.getElementById("register");
+      var z = document.getElementById("btn");
+
+      function register() {
+        x.style.left = "-400px";
+        y.style.left = "50px";
+        z.style.left = "110px"; /* this btn is above on the social media logos*/
+      }
+
+      function login() {
+        x.style.left = "50px";
+        y.style.left = "450px";
+        z.style.left = "0px"; /* this btn is above on the social media logos*/
+      }
+    </script>
   </body>
 </html>
