--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -13,9 +13,15 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap"
       rel="stylesheet"
     />
+
+    <!-- add fontawesome icons -->
+    <script
+      src="https://kit.fontawesome.com/7b47ec1b74.js"
+      crossorigin="anonymous"
+    ></script> 
     <title>ZFlix</title>
   </head>
-  <body>
+  <body id="body">
     <header class="main-header">
       <div class="container">
         <a class="page-title" href="#">ZFlix</a>
@@ -28,9 +34,7 @@
               <a href="#">TV Shows</a>
             </li>
             <li class="main-nav__item main-nav__item--login">
-            
-                <a class="btn btn-header" href="../HTML/Login.html">Login</a>
-            
+              <a class="btn btn-header" href="../HTML/Login.html">Login</a>
             </li>
           </ul>
         </nav>
@@ -67,5 +71,9 @@
         </div>
       </section>
     </main>
+
+    <a href="#body" id="backtotop">
+      <i class="fa-solid fa-circle-up fa-3x"></i>
+    </a>
   </body>
 </html>
