--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -18,7 +18,7 @@
     <script
       src="https://kit.fontawesome.com/7b47ec1b74.js"
       crossorigin="anonymous"
-    ></script> 
+    ></script>
     <title>ZFlix</title>
   </head>
   <body id="body">
@@ -46,7 +46,9 @@
         <div class="content">
           <h1>Discover the hundreds of Movies and TV Shows</h1>
           <p>Watch anywhere. Cancel at any time</p>
-          <a href="#" class="btn btn-secondary">Sign Up</a>
+          <a href="#" class="btn btn-showcase">Explore More
+            <i class="fa-solid fa-arrow-right"></i>
+          </a>
         </div>
       </section>
 
