--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -46,29 +46,97 @@
         <div class="content">
           <h1>Discover the hundreds of Movies and TV Shows</h1>
           <p>Watch anywhere. Cancel at any time</p>
-          <a href="#" class="btn btn-showcase">Explore More
+          <a href="#" class="btn btn-showcase"
+            >Explore More
             <i class="fa-solid fa-arrow-right"></i>
           </a>
         </div>
       </section>
 
       <section id="movies">
-        <div class="featured-movies">
-          <div class="row featured-movies__content">
-            <h2>Featured Movies</h2>
-            <p>Here is this months featured movies</p>
-          </div>
-
-          <!-- 
-        ! If pic's are huge, make them smaller. because big
-        ! pic's are not easy to use.
-       -->
-
-          <div class="row featured-movies__movie-posters">
-            <div class="movie-poster movie-1"></div>
-            <div class="movie-poster movie-2"></div>
-            <div class="movie-poster movie-3"></div>
-            <div class="movie-poster movie-4"></div>
+        <h2 class="section-title">Featured Movies</h2>
+        <p class="section-content">
+          Most popular Movies and TV Series this week
+        </p>
+        <div class="container">
+          <div class="row">
+            <!-- col-no: depends on the number of movies -->
+            <div class="col-4 card-container">
+              <div class="card">
+                <img
+                  class="card-image img-fluid"
+                  src="../HTML/pic/avengers-end-game-movie-poster.jpg"
+                  alt="avengers-end-game"
+                />
+                <div class="card-body">
+                  <h2>Avengers End Game</h2>
+                  <p>
+                    After the devastating events of Avengers: Infinity War
+                    (2018), the universe is in ruins due to the efforts of the
+                    Mad Tita...
+                  </p>
+                  <p>
+                    <button class="btn-primary btn-movies">Details</button>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-4 card-container">
+              <div class="card">
+                <img
+                  class="card-image img-fluid"
+                  src="../HTML/pic/spider-man-no-way-home-movie-poster.jpg"
+                  alt="spider-man-no-way-home"
+                />
+                <div class="card-body">
+                  <h2>Spider-Man No Way Home</h2>
+                  <p>
+                    Peter Parker's secret identity is revealed to the entire
+                    world. Desperate for help, Peter turns to Doctor Strange to
+                    make the world...
+                  </p>
+                  <p>
+                    <button class="btn-primary btn-movies">Details</button>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-4 card-container">
+              <div class="card">
+                <img
+                  class="card-image img-fluid"
+                  src="../HTML/pic/doctor-strange-mom-movie-poster.jpg"
+                  alt="doctor-strange-multiverse-of-madness"
+                />
+                <div class="card-body">
+                  <h2>Doctor Strange in the Multiverse of Madness</h2>
+                  <p>
+                    Following the events of Spider-Man No Way...
+                  </p>
+                  <p>
+                    <button class="btn-primary btn-movies">Details</button>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-4 card-container">
+              <div class="card">
+                <img
+                  class="card-image img-fluid"
+                  src="../HTML/pic/wakanda-forever-movie-poster.jpg"
+                  alt="black-panther-wakanda-forever"
+                />
+                <div class="card-body">
+                  <h2>Black Panther: Wakanda Forever</h2>
+                  <p>
+                    Queen Ramonda, Shuri, M'Baku, Okoye and the Dora Milaje fight to protect...
+                  </p>
+                  <p>
+                    <button class="btn-primary btn-movies">Details</button>
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
