--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -9,8 +9,10 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap"
       rel="stylesheet"
     />
 
@@ -110,9 +112,7 @@
                 />
                 <div class="card-body">
                   <h2>Doctor Strange in the Multiverse of Madness</h2>
-                  <p>
-                    Following the events of Spider-Man No Way...
-                  </p>
+                  <p>Following the events of Spider-Man No Way...</p>
                   <p>
                     <button class="btn-primary btn-movies">Details</button>
                   </p>
@@ -129,7 +129,8 @@
                 <div class="card-body">
                   <h2>Black Panther: Wakanda Forever</h2>
                   <p>
-                    Queen Ramonda, Shuri, M'Baku, Okoye and the Dora Milaje fight to protect...
+                    Queen Ramonda, Shuri, M'Baku, Okoye and the Dora Milaje
+                    fight to protect...
                   </p>
                   <p>
                     <button class="btn-primary btn-movies">Details</button>
