Edit Featured Movies

--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -71,14 +71,14 @@
                   alt="avengers-end-game"
                 />
                 <div class="card-body">
-                  <h2>Avengers End Game</h2>
-                  <p>
+                  <h2 class="movie-name">Avengers End Game</h2>
+                  <p class="movie-subject">
                     After the devastating events of Avengers: Infinity War
                     (2018), the universe is in ruins due to the efforts of the
-                    Mad Tita...
+                    Mad Titan...
                   </p>
                   <p>
-                    <button class="btn-primary btn-movies">Details</button>
+                    <button class="btn btn-movies">Details</button>
                   </p>
                 </div>
               </div>
@@ -91,14 +91,14 @@
                   alt="spider-man-no-way-home"
                 />
                 <div class="card-body">
-                  <h2>Spider-Man No Way Home</h2>
-                  <p>
+                  <h2 class="movie-name">Spider-Man No Way Home</h2>
+                  <p class="movie-subject">
                     Peter Parker's secret identity is revealed to the entire
                     world. Desperate for help, Peter turns to Doctor Strange to
-                    make the world...
+                    make the...
                   </p>
                   <p>
-                    <button class="btn-primary btn-movies">Details</button>
+                    <button class="btn btn-movies">Details</button>
                   </p>
                 </div>
               </div>
@@ -111,10 +111,16 @@
                   alt="doctor-strange-multiverse-of-madness"
                 />
                 <div class="card-body">
-                  <h2>Doctor Strange in the Multiverse of Madness</h2>
-                  <p>Following the events of Spider-Man No Way...</p>
+                  <h2 class="movie-name">
+                    Doctor Strange in the Multiverse of Madness
+                  </h2>
+                  <p class="movie-subject">
+                    Following the events of Spider-Man No Way Home, Doctor
+                    Strange unwittingly casts a forbidden spell that
+                    accidentally opens...
+                  </p>
                   <p>
-                    <button class="btn-primary btn-movies">Details</button>
+                    <button class="btn btn-movies">Details</button>
                   </p>
                 </div>
               </div>
@@ -127,13 +133,13 @@
                   alt="black-panther-wakanda-forever"
                 />
                 <div class="card-body">
-                  <h2>Black Panther: Wakanda Forever</h2>
-                  <p>
+                  <h2 class="movie-name">Black Panther: Wakanda Forever</h2>
+                  <p class="movie-subject">
                     Queen Ramonda, Shuri, M'Baku, Okoye and the Dora Milaje
-                    fight to protect...
+                    fight to protect the kingdom of Wakanda from intervening...
                   </p>
                   <p>
-                    <button class="btn-primary btn-movies">Details</button>
+                    <button class="btn btn-movies">Details</button>
                   </p>
                 </div>
               </div>
