--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -147,6 +147,22 @@
           </div>
         </div>
       </section>
+
+      <section id="upcoming-shows">
+        <h2 class="section-title">Upcoming Shows</h2>
+        <p class="section-content">
+          Soon May 2023
+        </p>
+        <div class="container">
+          <div class="row">
+            <div class="col-2 upcoming-card-container">
+              <div class="upcoming-card">
+                <img src="" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <a href="#body" id="backtotop">
