adding upcoming quantumania

--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -150,14 +150,37 @@
 
       <section id="upcoming-shows">
         <h2 class="section-title">Upcoming Shows</h2>
-        <p class="section-content">
-          Soon May 2023
-        </p>
         <div class="container">
-          <div class="row">
-            <div class="col-2 upcoming-card-container">
-              <div class="upcoming-card">
-                <img src="" alt="">
+          <div class="row upcoming-card-container">
+            <div class="upcoming-card">
+              <div class="col-2">
+                <div class="upcoming-movie-pic">
+                  <img
+                    class="card-image img-fluid"
+                    src="../HTML/pic/quantumania-upcoming.jpg"
+                    alt="ant-man-and-the-wasp-quantumania"
+                    style="padding: 10px"
+                  />
+                </div>
+              </div>
+
+              <div class="col-2">
+                <div class="upcoming-card-body">
+                  <h2 class="upcoming-movie-name">
+                    Ant-Man and the Wasp: Quantumania
+                  </h2>
+                  <h3 class="upcoming-date">17 Feb 2023</h3>
+                  <h4 class="cast">Paul Rudd, Evangeline Lily</h4>
+                  <p class="upcoming-movie-subject">
+                    Scott Lang and Hope Van Dyne, along with Hank Pym and Janet
+                    Van Dyne, explore the Quantum Realm, where they interact
+                    with strange creatures and embark on an adventure that goes
+                    beyond the limits of what they thought was possible.
+                  </p>
+                  <p>
+                    <button class="btn btn-upcoming-movies">Buy Ticket</button>
+                  </p>
+                </div>
               </div>
             </div>
           </div>
