edit upcoming shows banner pos.

--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -150,16 +150,20 @@
 
       <section id="upcoming-shows">
         <h2 class="section-title">Upcoming Shows</h2>
+        <p class="section-content">
+          Upcoming Show's schedule
+        </p>
         <div class="container">
           <div class="row upcoming-card-container">
-            <div class="upcoming-card">
+            <div class="card upcoming-card">
               <div class="col-2">
                 <div class="upcoming-movie-pic">
                   <img
                     class="card-image img-fluid"
                     src="../HTML/pic/quantumania-upcoming.jpg"
                     alt="ant-man-and-the-wasp-quantumania"
-                    style="padding: 10px"
+                    style="padding: 10px;
+                    border-radius: 15px"
                   />
                 </div>
               </div>
@@ -174,8 +178,7 @@
                   <p class="upcoming-movie-subject">
                     Scott Lang and Hope Van Dyne, along with Hank Pym and Janet
                     Van Dyne, explore the Quantum Realm, where they interact
-                    with strange creatures and embark on an adventure that goes
-                    beyond the limits of what they thought was possible.
+                    with strange creatures and...
                   </p>
                   <p>
                     <button class="btn btn-upcoming-movies">Buy Ticket</button>
