add upcoming shows

--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -150,9 +150,7 @@
 
       <section id="upcoming-shows">
         <h2 class="section-title">Upcoming Shows</h2>
-        <p class="section-content">
-          Upcoming Show's schedule
-        </p>
+        <p class="section-content">ZFlix Upcoming Shows schedule</p>
         <div class="container">
           <div class="row upcoming-card-container">
             <div class="card upcoming-card">
@@ -162,8 +160,7 @@
                     class="card-image img-fluid"
                     src="../HTML/pic/quantumania-upcoming.jpg"
                     alt="ant-man-and-the-wasp-quantumania"
-                    style="padding: 10px;
-                    border-radius: 15px"
+                    style="padding: 10px; border-radius: 15px"
                   />
                 </div>
               </div>
@@ -173,7 +170,7 @@
                   <h2 class="upcoming-movie-name">
                     Ant-Man and the Wasp: Quantumania
                   </h2>
-                  <h3 class="upcoming-date">17 Feb 2023</h3>
+                  <h3 class="upcoming-date">Feb 17, 2023</h3>
                   <h4 class="cast">Paul Rudd, Evangeline Lily</h4>
                   <p class="upcoming-movie-subject">
                     Scott Lang and Hope Van Dyne, along with Hank Pym and Janet
@@ -181,13 +178,148 @@
                     with strange creatures and...
                   </p>
                   <p>
-                    <button class="btn btn-upcoming-movies">Buy Ticket</button>
+                    <button class="btn btn-movies">Buy Ticket</button>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row upcoming-card-container">
+            <div class="card upcoming-card">
+              <div class="col-2">
+                <div class="upcoming-movie-pic">
+                  <img
+                    class="card-image img-fluid"
+                    src="../HTML/pic/gotg-vol-3-upcoming.jpg"
+                    alt="guardians-of-the-galaxy-vol3"
+                    style="padding: 10px; border-radius: 15px"
+                  />
+                </div>
+              </div>
+
+              <div class="col-2">
+                <div class="upcoming-card-body">
+                  <h2 class="upcoming-movie-name">
+                    Guardians of the Galaxy Vol. 3
+                  </h2>
+                  <h3 class="upcoming-date">May 5, 2023</h3>
+                  <h4 class="cast">Chris Pratt, Zoe Saldana, Dave Bautista</h4>
+                  <p class="upcoming-movie-subject">
+                    Still reeling from the loss of Gamora, Peter Quill rallies
+                    his team to defend the universe and one of their own - a
+                    mission that could mean the end of the Guardians if not
+                    successful.
+                  </p>
+                  <p>
+                    <button class="btn btn-movies">Buy Ticket</button>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row upcoming-card-container">
+            <div class="card upcoming-card">
+              <div class="col-2">
+                <div class="upcoming-movie-pic">
+                  <img
+                    class="card-image img-fluid"
+                    src="../HTML/pic/the-marvels-upcoming.jpg"
+                    alt="the-marvels"
+                    style="padding: 10px; border-radius: 15px"
+                  />
+                </div>
+              </div>
+
+              <div class="col-2">
+                <div class="upcoming-card-body">
+                  <h2 class="upcoming-movie-name">The Marvels</h2>
+                  <h3 class="upcoming-date">July 28, 2023</h3>
+                  <h4 class="cast">
+                    Brie Larson, Teyonah Parris, Iman Vellani
+                  </h4>
+                  <p class="upcoming-movie-subject">
+                    Sequel to the 2019 title 'Captain Marvel'.
+                  </p>
+                  <p>
+                    <button class="btn btn-movies">Buy Ticket</button>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row upcoming-card-container">
+            <div class="card upcoming-card">
+              <div class="col-2">
+                <div class="upcoming-movie-pic">
+                  <img
+                    class="card-image img-fluid"
+                    src="../HTML/pic/captain-america-nwo-upcoming.jpg"
+                    alt="captain-america-new-world-order"
+                    style="padding: 10px; border-radius: 15px"
+                  />
+                </div>
+              </div>
+
+              <div class="col-2">
+                <div class="upcoming-card-body">
+                  <h2 class="upcoming-movie-name">
+                    Captain America: New World Order
+                  </h2>
+                  <h3 class="upcoming-date">May 3, 2024</h3>
+                  <h4 class="cast">
+                    Harrison Ford, Tim Blake Nelson, Anthony MAckie
+                  </h4>
+                  <p class="upcoming-movie-subject">
+                    Plot kept under wraps. Fourth movie in the Captain America
+                    franchise.
+                  </p>
+                  <p>
+                    <button class="btn btn-movies">Buy Ticket</button>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row upcoming-card-container">
+            <div class="card upcoming-card">
+              <div class="col-2">
+                <div class="upcoming-movie-pic">
+                  <img
+                    class="card-image img-fluid"
+                    src="../HTML/pic/thunderbolts-upcoming.jpg"
+                    alt="thunderbolts"
+                    style="padding: 10px; border-radius: 15px"
+                  />
+                </div>
+              </div>
+
+              <div class="col-2">
+                <div class="upcoming-card-body">
+                  <h2 class="upcoming-movie-name">Thunderbolts</h2>
+                  <h3 class="upcoming-date">July 26, 2024</h3>
+                  <h4 class="cast">
+                    Florence Pugh, Harrison Ford, Olga Kurylenko
+                  </h4>
+                  <p class="upcoming-movie-subject">
+                    A group of supervillains are recruited to go on missions for
+                    the government.
+                  </p>
+                  <p>
+                    <button class="btn btn-movies">Buy Ticket</button>
                   </p>
                 </div>
               </div>
             </div>
           </div>
         </div>
+      </section>
+
+      <section id="plans">
+        <h2 class="section-title">Plans</h2>
       </section>
     </main>
 
